--- a/server/package.json
+++ b/server/package.json
@@ -41,11 +41,13 @@
     "@typescript-eslint/eslint-plugin": "5.38.0",
     "@typescript-eslint/parser": "5.38.0",
     "ava": "4.3.3",
+    "@ava/get-port": "2.0.0",
     "c8": "7.12.0",
     "eslint": "8.23.1",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-sonarjs": "0.15.0",
+    "koa": "2.13.4",
     "prettier": "2.7.1",
     "raw-body": "2.5.1",
     "ts-node": "10.9.1",
