#2 Formatting output files.

--- a/server/package.json
+++ b/server/package.json
@@ -55,8 +55,9 @@
   },
   "scripts": {
     "build:run": "yarn run lint && yarn run tsc",
-    "build:ci": "yarn run clear-build-artifacts && yarn run tsc && yarn run rename-js-to-mjs && yarn run tsc --module CommonJS",
+    "build:ci": "yarn run clear-build-artifacts && yarn run tsc --project tsconfig.build.json && yarn run rename-js-to-mjs && yarn run tsc --project tsconfig.build.json --module CommonJS",
     "clear-build-artifacts": "rm -rf dist build",
+    "format-output-files": "eslint --no-eslintrc --config '.eslintrc.output.cjs' --fix 'dist/*js'",
     "lint": "eslint ./src --ext .ts,.tsx",
     "rename-js-to-mjs": "find dist -name '*.js' -type f -exec sh -c 'for f in \"$@\"; do mv -- \"$f\" \"${f%.js}.mjs\"; done' -- {} +",
     "tsc": "tsc",
